@@ -4,6 +4,7 @@
 
 == rufus-scheduler - 2.0.16    not yet released
 
+- hardened Rufus.parse_time_string
 - running job thread: getting rid of the job pointer once job is done
 
 
